kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: lb-service
spec:
  selector:
    app: lb
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
